--- a/index.html
+++ b/index.html
@@ -4,13 +4,135 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Five</title>
+    <title>The Ultimate Five</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@2.24.0/dist/full.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
-<body>
+<body class="bg-stone-600">
     <header>
-        <h1>The Ultimate Five</h1>
-        <p>We do have some power who are dominating the football we call them the five! And five is the powerful number!</p>
+        <div class="grid justify-items-center p-10 bg-stone-700 bg-cover">
+            <h1 class="text-5xl font-bold pb-5 text-slate-100">The Ultimate Five!</h1>
+            <p class="pb-5 text-slate-300 font-bold">We do have some power who are dominating the football we call them the five! And five is the powerful number!</p>
+        </div>
     </header>
-    
+    <main class="bg-stone-600 bg-cover w-11/12 mx-auto mt-10" >
+        <section class="grid grid-cols-10 gap-4 justify-items-center">
+            <div class="col-start-1 col-span-7">
+                <div class="grid grid-cols-3 gap-2 px-2">
+                    <div class="card w-full bg-base-100 shadow">
+                        <figure class="px-10 pt-10 w-full h-60">
+                            <img src="./image/messy.png" alt="Shoes" class="rounded w-full h-60" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                            <h2 class="card-title">Shoes!</h2>
+                            <p>If a dog chews shoes whose shoes does he choose?</p>
+                            <div class="card-actions">
+                            <button class="btn btn-primary">Select</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card w-full bg-base-100 shadow">
+                        <figure class="px-10 pt-10 w-full h-60">
+                            <img src="./image/neimar.png" alt="Shoes" class="rounded w-full h-60" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                            <h2 class="card-title">Shoes!</h2>
+                            <p>If a dog chews shoes whose shoes does he choose?</p>
+                            <div class="card-actions">
+                            <button class="btn btn-primary">Select</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card w-full bg-base-100 shadow">
+                        <figure class="px-10 pt-10 w-full h-60">
+                            <img src="./image/mbappe.png" alt="Shoes" class="rounded w-full h-60" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                            <h2 class="card-title">Shoes!</h2>
+                            <p>If a dog chews shoes whose shoes does he choose?</p>
+                            <div class="card-actions">
+                            <button class="btn btn-primary">Select</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card w-full bg-base-100 shadow">
+                        <figure class="px-10 pt-10 w-full h-60">
+                            <img src="./image/machado.png" alt="Shoes" class="rounded w-full h-60" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                            <h2 class="card-title">Shoes!</h2>
+                            <p>If a dog chews shoes whose shoes does he choose?</p>
+                            <div class="card-actions">
+                            <button class="btn btn-primary">Select</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card w-full bg-base-100 shadow">
+                        <figure class="px-10 pt-10 w-full h-60">
+                            <img src="./image/ramos.png" alt="Shoes" class="rounded w-full h-60" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                            <h2 class="card-title">Shoes!</h2>
+                            <p>If a dog chews shoes whose shoes does he choose?</p>
+                            <div class="card-actions">
+                            <button class="btn btn-primary">Select</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card w-full bg-base-100 shadow">
+                        <figure class="px-10 pt-10 w-full h-60">
+                            <img src="./image/renato.png" alt="Shoes" class="rounded w-full h-60" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                            <h2 class="card-title">Shoes!</h2>
+                            <p>If a dog chews shoes whose shoes does he choose?</p>
+                            <div class="card-actions">
+                            <button class="btn btn-primary">Select</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- <div class="col-end-11 col-span-3 gap-4">
+                <div class="grid grid-cols-1 gap-4">
+                    <div class="card w-full bg-base-100 shadow">
+                        <div class="card-body items-center text-center">
+                            <h2 class="card-title">Selected - V</h2>
+                            <table>
+                                <tr>
+                                    <td>Number</td>
+                                    <td>Name</td>
+                                </tr>
+                            </table>
+                        </div>
+                      </div>
+                    <div class="card w-full bg-base-100 shadow">
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title">Budget</h2>
+                        <p>Per Player</p>
+                        <input type="text">
+                        <button class="btn btn-primary">Calculate</button>
+                        <p>Player Expenses</p>
+                        <p>$<span>0000</span></p>
+                    </div>
+                    <div class="card-body items-center text-center">
+                        <p>Manager</p>
+                        <input type="text">
+                        <p>Coach</p>
+                        <input type="text">
+                        <button class="btn btn-primary">Calculate</button>
+                        <p>Player Expenses</p>
+                        <p>$<span>0000</span></p>
+                    </div>
+                    </div>
+                    </div>
+                </div> -->
+            </div>
+        </section>
+    </main>
+
+<script src="/js/app.js"></script>
 </body>
 </html>
