--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <p class="pb-5 text-slate-300 font-bold">We do have some power who are dominating the football we call them the five! And five is the powerful number!</p>
         </div>
     </header>
-    <main class="bg-stone-600 bg-cover w-11/12 mx-auto mt-10" >
-        <section class="grid grid-cols-10 gap-4 justify-items-center">
+    <main class="bg-stone-600 bg-cover w-11/12 mx-auto mt-10 " >
+        <section class="grid grid-cols-10 gap-2 justify-items-center">
             <div class="col-start-1 col-span-7">
                 <div class="grid grid-cols-3 gap-2 px-2">
                     <div class="card w-full bg-base-100 shadow">
@@ -26,8 +26,7 @@
                             <img src="./image/messy.png" alt="Shoes" class="rounded w-full h-60" />
                         </figure>
                         <div class="card-body items-center text-center">
-                            <h2 class="card-title">Shoes!</h2>
-                            <p>If a dog chews shoes whose shoes does he choose?</p>
+                            <h2 class="card-title">Lionel Messi</h2>
                             <div class="card-actions">
                             <button class="btn btn-primary">Select</button>
                             </div>
@@ -38,8 +37,7 @@
                             <img src="./image/neimar.png" alt="Shoes" class="rounded w-full h-60" />
                         </figure>
                         <div class="card-body items-center text-center">
-                            <h2 class="card-title">Shoes!</h2>
-                            <p>If a dog chews shoes whose shoes does he choose?</p>
+                            <h2 class="card-title">Neymar Jr</h2>
                             <div class="card-actions">
                             <button class="btn btn-primary">Select</button>
                             </div>
@@ -50,8 +48,7 @@
                             <img src="./image/mbappe.png" alt="Shoes" class="rounded w-full h-60" />
                         </figure>
                         <div class="card-body items-center text-center">
-                            <h2 class="card-title">Shoes!</h2>
-                            <p>If a dog chews shoes whose shoes does he choose?</p>
+                            <h2 class="card-title">Kylian Mbappé</h2>
                             <div class="card-actions">
                             <button class="btn btn-primary">Select</button>
                             </div>
@@ -62,8 +59,7 @@
                             <img src="./image/machado.png" alt="Shoes" class="rounded w-full h-60" />
                         </figure>
                         <div class="card-body items-center text-center">
-                            <h2 class="card-title">Shoes!</h2>
-                            <p>If a dog chews shoes whose shoes does he choose?</p>
+                            <h2 class="card-title">Vítor Machado</h2>
                             <div class="card-actions">
                             <button class="btn btn-primary">Select</button>
                             </div>
@@ -74,8 +70,7 @@
                             <img src="./image/ramos.png" alt="Shoes" class="rounded w-full h-60" />
                         </figure>
                         <div class="card-body items-center text-center">
-                            <h2 class="card-title">Shoes!</h2>
-                            <p>If a dog chews shoes whose shoes does he choose?</p>
+                            <h2 class="card-title">Sergio Ramos</h2>
                             <div class="card-actions">
                             <button class="btn btn-primary">Select</button>
                             </div>
@@ -86,8 +81,7 @@
                             <img src="./image/renato.png" alt="Shoes" class="rounded w-full h-60" />
                         </figure>
                         <div class="card-body items-center text-center">
-                            <h2 class="card-title">Shoes!</h2>
-                            <p>If a dog chews shoes whose shoes does he choose?</p>
+                            <h2 class="card-title">Renato Sanches</h2>
                             <div class="card-actions">
                             <button class="btn btn-primary">Select</button>
                             </div>
@@ -95,40 +89,40 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="col-end-11 col-span-3 gap-4">
+            <div class="col-end-11 col-span-3 gap-2">
                 <div class="grid grid-cols-1 gap-4">
                     <div class="card w-full bg-base-100 shadow">
                         <div class="card-body items-center text-center">
                             <h2 class="card-title">Selected - V</h2>
                             <table>
                                 <tr>
-                                    <td>Number</td>
-                                    <td>Name</td>
+                                    <td>1</td>
+                                    <td class="text-slate-50 px-5">Lionel Messi</td>
                                 </tr>
                             </table>
                         </div>
-                      </div>
+                    </div>
                     <div class="card w-full bg-base-100 shadow">
-                    <div class="card-body items-center text-center">
-                        <h2 class="card-title">Budget</h2>
-                        <p>Per Player</p>
-                        <input type="text">
-                        <button class="btn btn-primary">Calculate</button>
-                        <p>Player Expenses</p>
-                        <p>$<span>0000</span></p>
+                        <div class="card-body items-center text-center">
+                            <h2 class="card-title">Budget</h2>
+                            <p>Per Player</p>
+                            <input type="text">
+                            <button class="btn btn-primary">Calculate</button>
+                            <p>Player Expenses</p>
+                            <p class="text-slate-50	">$<span>0000</span></p>
+                        </div>
+                        <div class="card-body items-center text-center">
+                            <p>Manager</p>
+                            <input type="text">
+                            <p>Coach</p>
+                            <input type="text">
+                            <button class="btn btn-primary">Calculate Total</button>
+                            <p>Total</p>
+                            <p class="text-red-700">$<span>0000</span></p>
+                        </div>
                     </div>
-                    <div class="card-body items-center text-center">
-                        <p>Manager</p>
-                        <input type="text">
-                        <p>Coach</p>
-                        <input type="text">
-                        <button class="btn btn-primary">Calculate</button>
-                        <p>Player Expenses</p>
-                        <p>$<span>0000</span></p>
                     </div>
-                    </div>
-                    </div>
-                </div> -->
+                </div>
             </div>
         </section>
     </main>
