--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
             </div>
         </section>
     </main>
+    <footer>
+        <p class="text-center py-10 bg-stone-700 bg-cover mt-10">Copyright @ 2022 All Rights Reserved.</p>
+    </footer>
 
 <script src="/js/app.js"></script>
 </body>
